--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Vincent's Portfolio | Home</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta name="title" content="Vincent Fung's Portfolio">
+  <meta name="description" content="Everything you need to know about me">
 
   <!-- Favicons -->
   <link href="assets/img/favicon2.png" rel="icon">
@@ -90,7 +90,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Hi, I'm Vincent and I am passionate about analyzing data, transforming data into information that can help on decision making. As as inquisitive individual, I love to learn new things and keep expanding my knowledge as well as staying up-to-date in the "technology world" we currently live in.
+            Hi, I'm Vincent and I am passionate about analyzing data, transforming data into information that can help in decision making. As as inquisitive individual, I love to learn new things and keep expanding my knowledge as well as staying up-to-date in the "technology world" we currently live in.
           </p>
         </div>
 
