--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vincent Fung</h1>
-      <p>I'm <span class="typed" data-typed-items="Web Developer, Data Analyst, Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, .NET Developer, Python Programmer"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/ysfung99/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -90,7 +90,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Hi, I'm Vincent and I am passionate about analyzing data, transforming data into information that can help in decision making. As as inquisitive individual, I love to learn new things and keep expanding my knowledge as well as staying up-to-date in the "technology world" we currently live in.
+            Hi, I'm Vincent and I am passionate about analyzing data, transforming data into information that can help in decision making. As an inquisitive individual, I love to learn new things and keep expanding my knowledge as well as staying up-to-date in the "technology world" we currently live in.
           </p>
         </div>
 
@@ -99,22 +99,22 @@
             <img src="assets/img/Vincent.png" class="img-fluid" alt="Profile Image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Web Developer & Data Analyst</h3>
+            <h3>Data Analyst & .NET Developer</h3>
             <p class="font-italic">
-              With 1+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development, and analying data with Power BI & Business Objects.
+              With 1+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development with ASP.NET together with MSSQL, and analyzing data with Power BI & Business Objects.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 Apr 1999</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> vincentys99.github.io</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (60) 16 3513560</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://vincentys99.github.io/">vincentys99.github.io</a></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +60163513560</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Selangor, Malaysia</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> <span id="myAge"></span></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> N/A</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> ysfung1704@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> N/A</li>
@@ -263,12 +263,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vincent Fung</h4>
-              <p><em>Innovative and deadline-driven ASP.NET Core Developer with 1+ year of experience designing and developing different types of web applications ranging from operational to reporting.</em></p>
-              <ul>
-                <li>Selangor, Malaysia</li>
-                <li>(60) 16 3513560</li>
-                <li>ysfung1704@gmail.com</li>
-              </ul>
+              <p><em>Innovative and deadline-driven ASP.NET Core Developer with 1+ year of experience designing and developing different types of web applications ranging from operational to admin dashboard.</em></p>
             </div>
 
             <h3 class="resume-title">Education & Certification</h3>
@@ -656,34 +651,8 @@
         </div>
 
         <div class="row mt-1">
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>Kajang, Selangor, Malaysia</p>
-              </div>
-
-              <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>ysfung1704@gmail.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>(60) 16 3513560</p>
-              </div>
-
-            </div>
-
-          </div>
-
           <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form" style="display: none;">
               <div class="form-row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -709,11 +678,30 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-
           </div>
 
-        </div>
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="address">
+                <i class="icofont-google-map"></i>
+                <h4>Location:</h4>
+                <p>Kajang, Selangor, Malaysia</p>
+              </div>
 
+              <div class="email">
+                <i class="icofont-envelope"></i>
+                <h4>Email:</h4>
+                <p>ysfung1704@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="icofont-phone"></i>
+                <h4>Call:</h4>
+                <p>+60163513560</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Contact Section -->
 
@@ -731,16 +719,16 @@
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/vincent-fung-a2244a168/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
+      </div> -->
+      <!-- <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
@@ -762,6 +750,12 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    var d = new Date();
+    var thisYear = d.getFullYear();
+    $('#myAge').html(thisYear - 1999);
+  </script>
 
 </body>
 
