--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vincent Fung</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, .NET Developer, Python Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Developer, Data Analyst, Python Programmer"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/ysfung99/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -122,7 +122,7 @@
               </div>
             </div>
             <p>
-              As a high school dropout myself, I have been having a different journey than what I had in mind years ago. But with a strong interest in computer and data science, I've established a sense of purpose in relation to what I hope to achieve for myself and others around me.
+              Being a high school dropout, I have been having a different journey than what I had in mind years ago. But with a strong interest in computer and data science, I've established a sense of purpose in relation to what I hope to achieve for myself and others around me.
             </p>
           </div>
         </div>
@@ -292,8 +292,13 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Career Pathway</h3>
             <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>Jan 2021 - Present</h5>
+              <p><em>CloudEdge Technology, Selangor, MY </em></p>
+            </div>
+            <div class="resume-item">
               <h4>Application Specialist</h4>
-              <h5>Jan 2020 - Present</h5>
+              <h5>Jan 2020 - Dec 2020</h5>
               <p><em>ChainSpirit, Kuala Lumpur, MY </em></p>
               <ul>
                 <li>Lead in operation and customer data analysis</li>
@@ -651,8 +656,30 @@
         </div>
 
         <div class="row mt-1">
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="address">
+                <i class="icofont-google-map"></i>
+                <h4>Location:</h4>
+                <p>Kajang, Selangor, Malaysia</p>
+              </div>
+
+              <div class="email">
+                <i class="icofont-envelope"></i>
+                <h4>Email:</h4>
+                <p>ysfung1704@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="icofont-phone"></i>
+                <h4>Call:</h4>
+                <p>+60163513560</p>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form" style="display: none;">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -678,28 +705,6 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>Kajang, Selangor, Malaysia</p>
-              </div>
-
-              <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>ysfung1704@gmail.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+60163513560</p>
-              </div>
-            </div>
           </div>
         </div>
       </div>
