--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vincent Fung</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Developer, Data Analyst, Python Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Engineer, Software Developer, Data Analyst"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/ysfung99/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -101,7 +101,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Data Analyst & .NET Developer</h3>
             <p class="font-italic">
-              With 1+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development with ASP.NET together with MSSQL, and analyzing data with Power BI & Business Objects.
+              With 1+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development with ASP.NET/ASP.NET Core together with MSSQL, and analyzing data with Power BI & Business Objects.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -117,7 +117,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> <span id="myAge"></span></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> N/A</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> ysfung1704@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> N/A</li>
+                  <!--<li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> N/A</li>-->
                 </ul>
               </div>
             </div>
@@ -294,12 +294,12 @@
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>Jan 2021 - Present</h5>
-              <p><em>CloudEdge Technology, Selangor, MY </em></p>
+              <p><em>CloudEdge Technology, Selangor, MY</em></p>
             </div>
             <div class="resume-item">
               <h4>Application Specialist</h4>
               <h5>Jan 2020 - Dec 2020</h5>
-              <p><em>ChainSpirit, Kuala Lumpur, MY </em></p>
+              <p><em>ChainSpirit, Kuala Lumpur, MY</em></p>
               <ul>
                 <li>Lead in operation and customer data analysis</li>
                 <li>Handle the development, implementation and maintenance of web applications</li>
@@ -308,7 +308,7 @@
             <div class="resume-item">
               <h4>IT Intern</h4>
               <h5>Jun 2019 - Dec 2019</h5>
-              <p><em>ChainSpirit, Kuala Lumpur, MY </em></p>
+              <p><em>ChainSpirit, Kuala Lumpur, MY</em></p>
               <ul>
                 <li>Support in scripting and maintaining daily automations</li>
                 <li>Build reports and dashboards in PowerBI and BO Web Intelligence</li>
