--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#skills"><i class="bx bx-code-curly"></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <!-- <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
         <!-- <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
@@ -679,7 +680,10 @@
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <div class="text-center">
+              <a type="button" class="btn" style="background: #0563bb; border: 0; padding: 10px 35px; color: #fff; transition: 0.4s; border-radius: 50px;" href="mailto:ysfung1704@gmail.com">Send an Email</a>
+            </div>
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form" style="display: none;">
               <div class="form-row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
