--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vincent Fung</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Software Developer, Data Analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Technical Developer, Software Engineer, Data Analyst"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/ysfung99/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/ysfung99/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="https://www.linkedin.com/in/vincent-fung-a2244a168/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/ysfung99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -349,7 +349,7 @@
         <a href="https://www.facebook.com/ysfung99/" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/ysfung99/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="https://www.linkedin.com/in/vincent-fung-a2244a168/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/ysfung99/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
