--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Data Analyst & .NET Developer</h3>
             <p class="font-italic">
-              With 1+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development with ASP.NET/ASP.NET Core together with MSSQL, and analyzing data with Power BI & Business Objects.
+              With 2+ year of experience in IT industry, I'm capable of handling both front-end & back-end web development with ASP.NET/ASP.NET Core together with MSSQL, and analyzing data with Power BI & Business Objects.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -213,7 +213,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vincent Fung</h4>
-              <p><em>Innovative and deadline-driven ASP.NET Core Developer with 1+ year of experience designing and developing different types of web applications ranging from operational to admin dashboard.</em></p>
+              <p><em>Innovative and deadline-driven ASP.NET Core Developer with 2+ year of experience designing and developing different types of web applications ranging from operational to admin dashboard.</em></p>
             </div>
 
             <h3 class="resume-title">Education & Certification</h3>
@@ -242,9 +242,23 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Career Pathway</h3>
             <div class="resume-item">
+              <h4>Technical Developer</h4>
+              <h5>Jan 2022 - Present</h5>
+              <p><em>ConVX Asia, Kuala Lumpur, MY</em></p>
+              <ul>
+                <li>Develop A/B testing for clients' websites using Google Optimize to increase conversion rates and improving customer satisfactions</li>
+                <li>Handle technical tasks to make magic happens</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Software Engineer</h4>
-              <h5>Jan 2021 - Present</h5>
+              <h5>Jan 2021 - Jan 2022</h5>
               <p><em>CloudEdge Technology, Selangor, MY</em></p>
+              <ul>
+                <li>Handle projects enhancements and support cases for different customers located in Singapore</li>
+                <li>Develop Property Sales System with ASP.NET Core and MS SQL for back-end</li>
+                <li>Provide ideas for smoother data flow from front to back-end</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Application Specialist</h4>
