--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
 
             <h3 class="resume-title">Education & Certification</h3>
             <div class="resume-item">
+              <h4>Ethereum and Solidity: The Complete Developer's Guide</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Udemy.com (by Stephen Grider)</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Specialized Certificate in Business Intelligence Analysis</h4>
               <h5>2018 - 2019</h5>
               <p><em>University of California San Diego Extension, CA, USA</em></p>
